--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
 server.port = 8181
+app.baseUrl= https://c06fcdd3.ngrok.io
