--- a/src/main/resources/web/frontend/package.json
+++ b/src/main/resources/web/frontend/package.json
@@ -10,6 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "resize-base64": "^1.0.12",
+    "resize-image": "^0.1.0",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
