--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+
+.DS_Store
+src/.DS_Store
+src/main/.DS_Store
+src/main/java/.DS_Store
+src/main/java/com/.DS_Store
+src/main/java/com/example/.DS_Store
