--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.password = Sachin7
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
-server.port = 8181
-app.baseUrl= https://a0d360fe.ngrok.io
+server.port = 8189
+app.baseUrl= http://localhost:8189
