--- a/src/main/resources/web/frontend/package.json
+++ b/src/main/resources/web/frontend/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "custom-build": "webpack-dev-server --entry ./src/main.js --output-filename ./dist/build.js"
   },
   "dependencies": {
     "vue": "^2.5.11",
