Completed chat app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.datasource.password = Sachin7
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
-server.port = 8189
-app.baseUrl= http://localhost:8189
+server.port = 8185
+app.baseUrl= http://localhost:8185
+spring.data.neo4j.username=neo4j
+spring.data.neo4j.password=secret
