--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ src/main/.DS_Store
 src/main/java/.DS_Store
 src/main/java/com/.DS_Store
 src/main/java/com/example/.DS_Store
+src/main/resources/static
